# stellar-weather-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: run_tests.yml
app/: __init__.py  main.py
app/api/: __init__.py  analysis.py  horoscope.py  weather.py
app/models/: __init__.py  horoscope.py  weather.py
app/schemas/: __init__.py  horoscope.py  weather.py
app/services/: __init__.py  horoscope_service.py  weather_service.py
app/utils/: __init__.py  config.py  database.py
docs/: API.md  DEPLOYMENT.md
tests/: conftest.py  test_analysis.py  test_horoscope.py  test_services.py  test_weather.py
