[tool.poetry]
name = "stellar-weather-api"
version = "0.1.0"
description = "一个提供星象与天气趣味数据服务的API后端项目"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
hypercorn = "^0.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(\.
    |build
    |dist
    |venv
    |migrations
    |tests
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
skip_glob = ["*/migrations/*", "*/.venv/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
sort_imports = true

[tool.pytest.ini_options]
pytest_plugins = "pytest_cov"
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]
